--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,51 @@
+# .NET / C# / ASP.NET Core
+bin/
+obj/
+*.dll
+*.exe
+*.pdb
+*.cache
+*.user
+*.suo
+*.userprefs
+*.log
+*.tlog
+.vs/
+
+# Build results
+[Dd]ebug/
+[Rr]elease/
+x64/
+x86/
+[Aa]pp_[Dd]ata/
+[Ll]ogs/
+
+# NuGet
+*.nupkg
+*.snupkg
+.nuget/
+packages/
+project.lock.json
+project.fragment.lock.json
+artifacts/
+
 # Angular specific
-/dist/
-/out-tsc/
-/tmp/
-/coverage/
-/e2e/test-output/
-/.angular/
+/ClientApp/dist/
+/ClientApp/out-tsc/
+/ClientApp/tmp/
+/ClientApp/coverage/
+/ClientApp/.angular/
 .angular/
 
 # Node modules and dependency files
-/node_modules/
-/package-lock.json
-/yarn.lock
+/ClientApp/node_modules/
+/ClientApp/package-lock.json
+/ClientApp/yarn.lock
 
 # Environment files
 /.env
+.env.local
+.env.*.local
 
 # Angular CLI and build artefacts
 /.angular-cli.json
@@ -26,3 +58,26 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+logs/
+
+# IDEs and editors
+.idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+.vscode/*
+!.vscode/extensions.json
+.history/*
+
+# OS
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+*~
+
+# NSwag generated files (optional - uncomment if you regenerate them)
+# ClientApp/src/app/services/students-api.service.ts
